added test links but still need to fix bill,user etc page

--- a/report.html
+++ b/report.html
@@ -1567,22 +1567,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,61891],[],[[4,0,1,0,[],[1,122,9882],[]],[5,0,1,0,[],[1,10005,10574],[]],[6,0,1,0,[],[0,20580,41310,7],[]]],[],[3,2,3,2]];
+window.output["suite"] = [1,2,3,0,[],[0,0,60856],[],[[4,0,1,0,[],[1,96,9433],[]],[5,0,1,0,[],[1,9530,9935],[]],[6,0,1,0,[],[0,19465,20581,7],[]],[8,0,1,0,[],[1,40046,20809],[]]],[],[4,3,4,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Regression Suite","*/home/ivana/workspace/robot_framework_page_object/regression_suite.robot","*regression_suite.robot","*Test Case 1","*Test Case 2","*Test Case 3","*Text 'Search results' did not appear in 30 seconds"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Regression Suite","*/home/ivana/workspace/robot_framework_page_object/regression_suite.robot","*regression_suite.robot","*Test Case 1","*Test Case 2","*Test Case 3","*Text 'Search results' did not appear in 10 seconds","*Test Case 4"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:02","fail":1,"label":"Critical Tests","pass":2},{"elapsed":"00:01:02","fail":1,"label":"All Tests","pass":2}],[],[{"elapsed":"00:01:02","fail":1,"id":"s1","label":"Regression Suite","name":"Regression Suite","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:01:01","fail":1,"label":"Critical Tests","pass":3},{"elapsed":"00:01:01","fail":1,"label":"All Tests","pass":3}],[],[{"elapsed":"00:01:01","fail":1,"id":"s1","label":"Regression Suite","name":"Regression Suite","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1493661342583;
+window.output["baseMillis"] = 1493805586159;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 61910;
+window.output["generated"] = 60882;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
