--- a/report.html
+++ b/report.html
@@ -1567,22 +1567,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,60856],[],[[4,0,1,0,[],[1,96,9433],[]],[5,0,1,0,[],[1,9530,9935],[]],[6,0,1,0,[],[0,19465,20581,7],[]],[8,0,1,0,[],[1,40046,20809],[]]],[],[4,3,4,3]];
+window.output["suite"] = [1,2,3,0,[],[0,0,67590],[],[[4,0,1,0,[],[1,96,9266],[]],[5,0,1,0,[],[1,9362,9766],[]],[6,0,1,0,[],[0,19129,20288,7],[]],[8,0,1,0,[],[1,39418,17461],[]],[9,0,1,0,[],[0,56880,10709,10],[]]],[],[5,3,5,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Regression Suite","*/home/ivana/workspace/robot_framework_page_object/regression_suite.robot","*regression_suite.robot","*Test Case 1","*Test Case 2","*Test Case 3","*Text 'Search results' did not appear in 10 seconds","*Test Case 4"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Regression Suite","*/home/ivana/workspace/robot_framework_page_object/regression_suite.robot","*regression_suite.robot","*Test Case 1","*Test Case 2","*Test Case 3","*Text 'Search results' did not appear in 10 seconds","*Test Case 4","*Test Case 5","*Page should have contained text 'List' but did not"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:01","fail":1,"label":"Critical Tests","pass":3},{"elapsed":"00:01:01","fail":1,"label":"All Tests","pass":3}],[],[{"elapsed":"00:01:01","fail":1,"id":"s1","label":"Regression Suite","name":"Regression Suite","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:01:07","fail":2,"label":"Critical Tests","pass":3},{"elapsed":"00:01:07","fail":2,"label":"All Tests","pass":3}],[],[{"elapsed":"00:01:08","fail":2,"id":"s1","label":"Regression Suite","name":"Regression Suite","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1493805586159;
+window.output["baseMillis"] = 1493811499870;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 60882;
+window.output["generated"] = 67622;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
